[metadata]
name = isisdl
description = Download *everything* from ISIS - with *speed*
author = Emily Seebeck
license = GPL3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages =
    isisdl
    isisdl.backend

python_requires = >=3.8
install_requires =
    cryptography>=35
    requests>=2
    pyyaml>=6
    packaging>=21
    colorama>=0.4
    pyinotify>=0.9; platform_system=="Linux"
    distro>=1
    psutil>=5
    sqlalchemy[mypy]~=2.0.19
    sqlalchemy-utils~=0.41.1

package_dir =
    = src

zip_safe = no

[options.entry_points]
console_scripts =
    isisdl = isisdl.__main__:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
isisdl = resources/**

[flake8]
max-line-length = 200