[metadata]
name = isisdl
description = Download *everything* from ISIS – with *speed*
author = Emily Seebeck
license = GPL3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages =
    isisdl
    isisdl.backend
    isisdl.api

python_requires = >=3.10
install_requires =
    cryptography~=41.0.3
    requests~=2.31.0
    pyyaml~=6.0.1
    packaging~=23.1
    colorama~=0.4.6
    pyinotify~=0.9.6; platform_system=="Linux"
    distro~=1.8.0
    psutil~=5.9.5
    sqlalchemy[mypy]~=2.0.19
    sqlalchemy-utils~=0.41.1

package_dir =
    = src

zip_safe = no

[options.entry_points]
console_scripts =
    isisdl = isisdl.__main__:main

[options.extras_require]
testing =
    pytest~=7.4.0
    pytest-cov~=4.1.0
    mypy~=1.5.0
    flake8~=6.1.0
    tox~=4.8.0
    types-requests~=2.31.0.2
    types-pyyaml~=6.0.12.11
    twine~=4.0.2
    build~=0.10.0
    radon~=6.0.1

[options.package_data]
isisdl = resources/**

[flake8]
max-line-length = 200