[metadata]
name = isisdl
description = Download *everything* from ISIS - with _speed_
author = Emily Seebeck
license = GPL3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages =
    isisdl
    isisdl.backend

python_requires = >=3.8
install_requires =
    cryptography~=38.0.4
    requests~=2.28.1
    PyYAML~=6.0
    packaging~=22.0
    colorama~=0.4.6
    pyinotify~=0.9.6; platform_system=="Linux"
    distro~=1.8.0
    psutil~=5.9.4

package_dir =
    = src

zip_safe = no

[options.entry_points]
console_scripts =
    isisdl = isisdl.__main__:main

[options.extras_require]
testing =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    mypy~=0.910
    flake8~=3.9.2
    tox~=3.24.3
    types-requests~=2.28.11.5
    types-PyYAML~=6.0.12.2
    types-colorama~=0.4.15
    types-psutil~=5.9.5
    twine~=4.0.2
    build~=0.9.0
    radon~=5.1.0
    setuptools~=69.0.3
    matplotlib~=3.7.4


[options.package_data]
isisdl = resources/**

[flake8]
max-line-length = 220
